<resources>
    <string name="app_name">Wira Sukma Saputra</string>
    <string name="android_developer">Android Developer UI UX Designer</string>
    <string name="heroes_name">Nama Shopping</string>
    <string name="description">Deskripsi</string>
    <string name="deskripsi_2">I am a UI UX Design novice who is excited to start a career in the world of user interface (UI) and user experience (UX) design. I recently graduated in design and have a basic understanding of
        design principles and design elements such as typography, color, composition, and layout.
Since learning about UI UX Design, I started to realize how important it is to prioritize user experience in every design project. I always strive to create solutions that are easy to use and intuitive for the end user.
I have developed skills in using design software such as Adobe Photoshop, Adobe and Figma. In addition, I also understand the importance of user research to identify user needs and preferences in the design process.
I have a passion for continuously learning and collaborating with other design professionals, web developers, and product managers to create superior products and add value to users.
</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="i_have">AlReady have an account? Login</string>
    <string name="email">Wiralodraputra07@gmail.com</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="update">Update Profile</string>
    <string name="signup">Signup</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="tab_text_1">Gallery</string>
    <string name="tab_text_2">Home</string>
    <string name="tab_text_3">Setting</string>
    <string name="tab_text_4">Upload</string>
    <string name="tab_text_5">Profile</string>
    <string name="welcome">Welcome </string>
    <string name="teknik">Teknik Informatika</string>
    <string name="jurusan">Jurusan</string>
    <string name="uniku">Universitas Kuningan</string>
    <string name="campus">Kampus</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello there, Welcome Back</string>
    <string name="signin">Sign In To Continue</string>
    <string name="github">https://github.com/Wira07</string>
    <string name="github_user">Github</string>
    <string name="linkedn">https://www.linkedin.com/in/wira-sukma-saputra/</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_github">GithubUser</string>
    <string name="btnPost">Share Story</string>
    <string name="post_as">Share story as </string>
    <string name="storyImageDesc">Story Image Desc</string>
    <string name="cameraChoose">Camera</string>
    <string name="galleryChoose">Gallery</string>
    <string name="descriptionStory">Story Description</string>
    <string name="icon_map_pin">Icon map pin</string>
    <string name="yourLocation">Your Location</string>
    <string name="login">Login</string>
    <string name="wira">Wira Sukma Saputra</string>
    <string name="wiralodrasaputra07gmail.com">wiralodrasaputra07@gmail.com</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Maps</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>
    <string name="menu_upload">Upload</string>
    <string name="Enter_Your_Email">Enter Your Email</string>
    <string name="Enter_Your_Password">Enter Your Password</string>
    <string name="error_email_is_not_valid">Email is not valid</string>
    <string name="Categories">Categories</string>
    <string name="pemula">Aplikasi Shop E-COMMERCE</string>
    <string name="get_started">Get Started</string>
    <string name="about">About</string>
    <string name="map">See Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>