<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">

    <ImageView
        android:id="@+id/imageSignup"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="358dp"
        android:text="@string/Enter_Your_Email"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSignup"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:padding="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableLeft="@drawable/baseline_email_24"
        android:background="@drawable/shape_name_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSignup" />

    <TextView
        android:id="@+id/tv_password_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="458dp"
        android:layout_marginRight="30dp"
        android:text="@string/Enter_Your_Password"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Signup_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_email"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="12dp"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:background="@drawable/shape_name_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_email" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/signup"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded"
        app:layout_constraintTop_toBottomOf="@+id/Signup_password" />


</androidx.constraintlayout.widget.ConstraintLayout>