<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card1"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_campus"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/uniku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/campus"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/fkom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/uniku"
                    android:layout_centerHorizontal="true"
                    android:text="@string/uniku"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card2"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_engineering"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/jurusan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/linkedn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/github"
                    android:layout_centerHorizontal="true"
                    android:text="@string/teknik"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card3"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_campus"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/uniku1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/campus"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/fkom1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/uniku1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/uniku"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card4"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_engineering"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/github1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/jurusan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/linkedn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/github1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/teknik"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card5"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_campus"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/uniku2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/campus"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/fkom2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/uniku2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/uniku"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card6"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_engineering"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/github2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/jurusan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/linkedn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/github2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/teknik"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card7"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_campus"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/uniku3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/campus"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/fkom3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/uniku3"
                    android:layout_centerHorizontal="true"
                    android:text="@string/uniku"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card8"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/purple_700"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/card_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_engineering"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/github4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/jurusan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/linkedn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/github4"
                    android:layout_centerHorizontal="true"
                    android:text="@string/teknik"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>